tests/rosetta/out/Swift/active-directory-search-for-a-user.error
swiftc: exit status 1
/tmp/active-directory-search-for-a-user.swift:3:35: warning: forced cast from '[String]?' to '[String]' only unwraps optionals; did you mean to use '!'?
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:39Z
 2 | func search_user(_ directory: [String: [String]], _ username: String) -> [String] {
 3 |     return (directory["username"] as! [String])
   |                                   `- warning: forced cast from '[String]?' to '[String]' only unwraps optionals; did you mean to use '!'?
 4 | }
 5 | func main() {

/tmp/active-directory-search-for-a-user.swift:6:18: error: heterogeneous collection literal could only be inferred to '[String : Any]'; add explicit type annotation if this is intentional
 4 | }
 5 | func main() {
 6 |     let client = ["Base": "dc=example,dc=com", "Host": "ldap.example.com", "Port": 389, "GroupFilter": "(memberUid=%s)"]
   |                  `- error: heterogeneous collection literal could only be inferred to '[String : Any]'; add explicit type annotation if this is intentional
 7 |     let directory = ["username": ["admins", "users"], "john": ["users"]]
 8 |     let groups = search_user(directory, "username")

/tmp/active-directory-search-for-a-user.swift:6:9: warning: initialization of immutable value 'client' was never used; consider replacing with assignment to '_' or removing it
 4 | }
 5 | func main() {
 6 |     let client = ["Base": "dc=example,dc=com", "Host": "ldap.example.com", "Port": 389, "GroupFilter": "(memberUid=%s)"]
   |         `- warning: initialization of immutable value 'client' was never used; consider replacing with assignment to '_' or removing it
 7 |     let directory = ["username": ["admins", "users"], "john": ["users"]]
 8 |     let groups = search_user(directory, "username")
