tests/rosetta/out/Swift/active-directory-search-for-a-user.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:30Z
func search_user(_ directory: [String: [String]], _ username: String) -> [String] {
    return directory[username]
}
func main() {
    let client = ["Base": "dc=example,dc=com", "Host": "ldap.example.com", "Port": 389, "GroupFilter": "(memberUid=%s)"]
    let directory = ["username": ["admins", "users"], "john": ["users"]]
    let groups = search_user(directory, "username")
    if groups.count > 0 {
        var out = "Groups: ["
        var i = 0
        while i < groups.count {
            out = out + "\"" + groups[i] + "\""
            if i < groups.count - 1 {
                out = out + ", "
            }
            i = i + 1
        }
        out = out + "]"
        print(out)
    }
    else {
        print("User not found")
    }
}
main()
